--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,13 @@
 FROM node:14-buster
 
 # Install build dependencies and SQLite3
-RUN apt-get update && apt-get install -y python make g++ sqlite3 libsqlite3-dev tzdata
+RUN apt-get update && apt-get install -y python make g++ sqlite3 libsqlite3-dev tzdata 
 
 WORKDIR /usr/src/app
 
 # Create directory for the database
 RUN mkdir -p /usr/src/app/db && chmod 777 /usr/src/app/db
+RUN mkdir -p /usr/src/app/plans && chmod 777 /usr/src/app/plans
 
 # Set the timezone to Europe/Berlin
 ENV TZ=Europe/Berlin
@@ -17,8 +18,10 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+RUN npm install multer
+
 # Force rebuild of sqlite3
-RUN npm rebuild sqlite3 --build-from-source
+# RUN npm rebuild sqlite3 --build-from-source
 
 # We'll copy the application files at runtime via volume mount
 
